# WMPlugin_Deps

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: blank.yml
blosc2/: CMakeLists.txt
ddemidov_mba/: CMakeLists.txt
eigen/: CMakeLists.txt
geotiff/: CMakeLists.txt
gpkgio/: CMakeLists.txt
jlblancoc_nanoflann/: CMakeLists.txt
libtiff/: CMakeLists.txt
nlohmann/: CMakeLists.txt
